--- a/index.html
+++ b/index.html
@@ -375,22 +375,98 @@
                 </div>
                 <div class="examples_item">
                     <div class="examples_image-block">
-                        <img src="./img/examples/two-shopping-cart.png" alt="shopping cart">
+                        <img class="examples_image" src="./img/examples/two-shopping-cart.png" alt="shopping cart">
+                        <div class="examples_description">
+                            <div class="title">
+                                <h3>
+                                    Онлайн-магазин
+
+                                </h3>
+                            </div>
+                            <div class="desctiption">
+                                <p>
+                                    для оптовых покупок
+
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <div class="examples_image-block">
-                        <img src="./img/examples/flower-purple.png" alt="flower purple">
+                        <img class="examples_image" src="./img/examples/flower-purple.png" alt="flower purple">
+                        <div class="examples_description">
+                            <div class="title">
+                                <h3>
+                                    Онлайн-магазин
+                                </h3>
+                            </div>
+                            <div class="desctiption">
+                                <p>
+                                    для флористов
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <div class="examples_image-block">
-                        <img src="./img/examples/hair-dryer-and-brush 1.png" alt="brush">
+                        <img class="examples_image" src="./img/examples/hair-dryer-and-brush 1.png" alt="brush">
+                        <div class="examples_description">
+                            <div class="title">
+                                <h3>
+                                    Онлайн-магазин
+                                </h3>
+                            </div>
+                            <div class="desctiption">
+                                <p>
+                                    для парикмахеров
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <div class="examples_image-block">
-                        <img src="./img/examples/pexels-shiny-diamo.png" alt="pexels">
+                        <img class="examples_image" src="./img/examples/pexels-shiny-diamo.png" alt="pexels">
+                        <div class="examples_description">
+                            <div class="title">
+                                <h3>
+                                    Онлайн-магазин
+                                </h3>
+                            </div>
+                            <div class="desctiption">
+                                <p>
+                                    для визажистов
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="examples_image-block">
-                        <img src="./img/examples/deva-williamson-unsplash.png" alt="williamson">
+                        <img class="examples_image" src="./img/examples/deva-williamson-unsplash.png" alt="williamson">
+                        <div class="examples_description">
+                            <div class="title">
+                                <h3>
+                                    Онлайн-магазин
+                                </h3>
+                            </div>
+                            <div class="desctiption">
+                                <p>
+                                    для кондитеров
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <div class="examples_image-block">
-                        <img src="./img/examples/color-palette-catalogue-scheme-roller.png" alt="collor catalogue">
+                        <img class="examples_image" src="./img/examples/color-palette-catalogue-scheme-roller.png"
+                            alt="collor catalogue">
+                        <div class="examples_description">
+                            <div class="title">
+                                <h3>
+                                    Онлайн-магазин
+                                </h3>
+                            </div>
+                            <div class="desctiption">
+                                <p>
+                                    для художников
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
