--- a/index.html
+++ b/index.html
@@ -471,6 +471,59 @@
                 </div>
             </div>
         </section>
+        <section class="information">
+            <div class="background_images">
+                <img src="./img/information/ball.svg" alt="ball">
+                <img src="./img/information/flower-purple.svg" alt="flower">
+            </div>
+            <div class="container">
+                <div class="title">
+                    <h3>
+                        Необходимо больше информации?
+                    </h3>
+                </div>
+                <div class="description">
+                    <p>
+                        Если Вы владелец онлайн-магазина или только начинаете свой путь в электронной коммерции и вам
+                        нужен уникальный дизайн онлайн магазина для стартапа, обратитесь к нашему веб дизайнеру. За
+                        выгодную цену и короткий период времени, он поможет визуализировать ваш веб проект.
+                    </p>
+                </div>
+                <div class="button">
+                    <button>
+                        Оставить заявку
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="feedback">
+            <div class="background_images">
+                <img src="./img/feedback/phone call.svg" alt="phone">
+                <img src="./img/feedback/ball.svg" alt="ball">
+            </div>
+            <div class="container">
+                <div class="title">
+                    <h3>
+                        Обсудить проект
+                    </h3>
+                </div>
+                <div class="description">
+                    <p>
+                        Расскажите о своих бизнес-целях и мы поможем вам в их достижении
+                    </p>
+                </div>
+                <form action="#" class="feedback_form">
+                    <input class="input_name input_field" required autocomplete type="text" name="name"
+                        placeholder="Имя">
+                    <input class="input_messenger input_field" required autocomplete type="text" name="telegram"
+                        placeholder="Telegram/Viber">
+                    <input class="input_email input_field" required autocomplete type="email" name="email"
+                        placeholder="Email">
+                    <input class="submit" type="submit" value="Отправить">
+                </form>
+
+            </div>
+        </section>
     </div>
 
 
