finall layout desctop wersion

--- a/index.html
+++ b/index.html
@@ -524,6 +524,81 @@
 
             </div>
         </section>
+        <footer class="footer">
+            <div class="container">
+                <div class="contacts">
+                    <div class="social_network">
+                        <div class="logo">
+                            <img src="./img/footer/logo.svg" alt="logo">
+                        </div>
+                        <div class="links">
+                            <a href="#"><img src="./img/footer/instagram.svg" alt="instagram"></a>
+                            <a href="#"><img src="./img/footer/facebook.svg" alt="facebook"></a>
+                            <a href="#"><img src="./img/footer/telegram.svg" alt="telegram"></a>
+                            <a href="#"><img src="./img/footer/viber.svg" alt="viber"></a>
+                            <a href="#"><img src="./img/footer/whatsapp.svg" alt="whatsapp"></a>
+                        </div>
+                    </div>
+                    <div class="phones">
+                        <div class="phone_item">
+                            <div class="icon">
+                                <img src="./img/footer/viber.svg" alt="viber">
+                            </div>
+                            <div class="name">
+                                <h3>
+                                    Валерия::
+                                </h3>
+                            </div>
+                            <div class="phone_number">
+                                <h3>
+                                    +79805585949
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="phone_item">
+                            <div class="icon">
+                                <img src="./img/footer/viber.svg" alt="viber">
+                            </div>
+                            <div class="name">
+                                <h3>
+                                    Aнна:
+                                </h3>
+                            </div>
+                            <div class="phone_number">
+                                <h3>
+                                    +79805585949
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="phone_item">
+                            <div class="icon">
+                                <img src="./img/footer/viber.svg" alt="viber">
+                            </div>
+                            <div class="name">
+                                <h3>
+                                    Валерия
+                                </h3>
+                            </div>
+                            <div class="phone_number">
+                                <h3>
+                                    +79805585949
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="email">
+                        <h3>
+                            hr@dv-s.com
+                        </h3>
+                    </div>
+                </div>
+                <div class="information">
+                    <h3>
+                        Developers 2018-2021 © All rights reserved
+                    </h3>
+                </div>
+            </div>
+        </footer>
     </div>
 
 
