mobile layout 960 px + burger menu

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                     <div class="nav_logo">
                         <img src="./img/logo.svg" alt="developers logo">
                     </div>
+                    <div class="burger_menu">
+                        <img src="./img/burger.svg" alt="menu">
+                        <img src="./img/burger.svg" alt="menu">
+                        <img src="./img/burger.svg" alt="menu">
+                    </div>
                     <nav class="nav_links">
                         <a href="#" class="link">Услуги</a>
                         <a href="#" class="link">Портфолио</a>
