--- a/index.html
+++ b/index.html
@@ -505,6 +505,7 @@
             <div class="background_images">
                 <img src="./img/feedback/phone call.svg" alt="phone">
                 <img src="./img/feedback/ball.svg" alt="ball">
+                <img src="./img/feedback/Postpaid.svg" alt="Postpaid">
             </div>
             <div class="container">
                 <div class="title">
